--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dadmor/p7-state-form",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Ultra light form helper based on pure react methods",
   "license": "MIT",
   "repository": "PostType7/P7-State-Form",
@@ -12,7 +12,7 @@
     "react",
     "state"
   ],
-  "dependencies": {
+  "devDependencies": {
     "@types/react": "^18.0.19"
   }
 }
